--- a/webfront/src/Components/Login.module.css
+++ b/webfront/src/Components/Login.module.css
@@ -14,7 +14,3 @@
 .form .submitButton:global(.MuiButtonBase-root) {
     margin-top: 50px;
 }
-
-.closeButton:global(.MuiButtonBase-root) {
-    margin-top: 10px;
-}
