--- a/webfront/src/Components/UserAdmin.module.css
+++ b/webfront/src/Components/UserAdmin.module.css
@@ -8,7 +8,8 @@
 }
 
 .card {
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     margin: 10px auto 10px auto;
 }
 
